--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -18,135 +18,7 @@ server {
 
     location /list {
         default_type application/json;
-        return 200 '["hello", "memberberries", "wiki-bot", "search-bot", "noter-bot", "repl-bot", "stat-bot", "5minphp-bot", "loro-bot", "brackets-bot", "guido-bot", "karma-bot", "anek-bot", "ksenks-bot", "rtnumber-bot", "excerpt-bot", "tweet-bot", "rest-voter", "hcalendar-bot", "doit-bot", "money-bot", "docker-bot", "random-bot", "bot-4-bots", "lucky", "weather-bot", "or-bot"]';
-    }
-
-    location /api/hello/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://hello:8080/;
-     }
-
-    location /api/memberberries/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://memberberries:8080/;
-    }
-
-    location /api/wiki-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://wiki-bot:8080/;
-    }
-
-    location /api/search-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://search-bot:8080/;
-    }
-
-    location /api/noter-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://noter-bot:8080/;
-    }
-
-    location /api/repl-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://repl-bot:8080/;
-    }
-
-    location /api/stat-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://stat-bot:8080/;
-    }
-
-    location /api/gif-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://gif-bot:8080/;
-    }
-
-    location /api/giphy-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://giphy-bot:8080/;
-    }
-
-    location /api/brackets-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://brackets-bot:8080/;
-    }
-
-    location /api/guido-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://guido-bot:8080/;
-    }
-
-    location /api/5minphp-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://5minphp-bot:8080/;
-    }
-
-    location /api/loro-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://loro-bot:8080/;
-    }
-
-    location /api/karma-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://karma-bot:8080/;
-    }
-
-    location /api/anek-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://anek-bot:8080/;
-    }
-
-    location /api/ksenks-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://ksenks-bot:8080/;
+        return 200 '["rtnumber-bot", "tweet-bot"]';
     }
 
     location /api/rtnumber-bot/ {
@@ -157,14 +29,6 @@ server {
         proxy_pass              http://rtnumber-bot:8080/;
     }
 
-    location /api/excerpt-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://excerpt-bot:8080/;
-    }
-
     location /api/tweet-bot/ {
         proxy_redirect          off;
         proxy_set_header        X-Real-IP $remote_addr;
@@ -172,87 +36,6 @@ server {
         proxy_set_header        Host $http_host;
         proxy_pass              http://tweet-bot:8080/;
     }
-
-    location /api/rest-voter/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://rest-voter:8080/;
-    }
-
-    location /api/hcalendar-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://hcalendar-bot:8080/;
-    }
-
-    location /api/doit-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://doit-bot:8080/;
-    }
-
-    location /api/money-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://money-bot:8080/;
-     }
-
-    location /api/docker-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://docker-bot:8080/;
-     }
-
-    location /api/random-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://random-bot:8080/;
-    }
-
-    location /api/bot-4-bots/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://bot-4-bots:8080/;
-    }
-
-    location /api/lucky/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://lucky:8080/;
-    }
-
-    location /api/weather-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://weather-bot:8080/;
-    }
-
-    location /api/or-bot/ {
-        proxy_redirect          off;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        Host $http_host;
-        proxy_pass              http://or-bot:8080/;
-    }
-
 
     location / {
         return 302 'https://github.com/umputun/rt-bot';
